--- a/nginx.tmpl
+++ b/nginx.tmpl
@@ -220,6 +220,8 @@ upstream {{ $upstream_name }} {
 {{/* Get the VIRTUAL_ROOT By containers w/ use fastcgi root */}}
 {{ $vhost_root := or (first (groupByKeys $containers "Env.VIRTUAL_ROOT")) "/var/www/public" }}
 
+{{/* Get the PROXY_PATH By containers w/ use proxy_pass */}}
+{{ $proxy_path := or (first (groupByKeys $containers "Env.PROXY_PATH")) "" }}
 
 {{/* Get the first cert name defined by containers w/ the same vhost */}}
 {{ $certName := (first (groupByKeys $containers "Env.CERT_NAME")) }}
@@ -301,7 +303,16 @@ server {
 		include fastcgi_params;
 		fastcgi_pass {{ trim $upstream_name }};
 		{{ else }}
-		proxy_pass {{ trim $proto }}://{{ trim $upstream_name }};
+		proxy_pass {{ trim $proto }}://{{ trim $upstream_name }}{{ if $proxy_path }}/{{ trim $proxy_path }}/{{ end }};
+		proxy_redirect off;
+		proxy_buffering off;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection $http_connection;
+		{{ if $proxy_path }}
+		proxy_cookie_path /{{ trim $proxy_path }}/ /;
+		{{ end }}
+		access_log off;
 		{{ end }}
 
 		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
@@ -348,7 +359,16 @@ server {
 		include fastcgi_params;
 		fastcgi_pass {{ trim $upstream_name }};
 		{{ else }}
-		proxy_pass {{ trim $proto }}://{{ trim $upstream_name }};
+		proxy_pass {{ trim $proto }}://{{ trim $upstream_name }}{{ if $proxy_path }}/{{ trim $proxy_path }}/{{ end }};
+		proxy_redirect off;
+		proxy_buffering off;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection $http_connection;
+		{{ if $proxy_path }}
+		proxy_cookie_path /{{ trim $proxy_path }}/ /;
+		{{ end }}
+		access_log off;
 		{{ end }}
 		{{ if (exists (printf "/etc/nginx/htpasswd/%s" $host)) }}
 		auth_basic	"Restricted {{ $host }}";
